# serializer version: 1
# name: test_compile_hogql_predicate_emits_no_table_qualifier
  'and(equals(properties.`$browser`, %(hogql_val_0)s), equals(event, %(hogql_val_1)s))'
# ---
# name: test_compile_hogql_predicate_emits_unqualified_materialized_column
  'like(properties.`$current_url`, %(hogql_val_0)s)'
# ---
